# mbase

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENCE  LICENSE  MODULAR.md  README.md  RELEASE.md  SECURITY.md  description.json  description.txt  index.html  main.cpp  mbase_lib_cmake_param_examples.txt  mbase_web_example.py  program_core.drawio  protocol_params.txt
.github/workflows/: build.yml  doc_build.yml  docs_build.yml  docs_deploy.yml  release.yml
cmake/: FindUUID.cmake  MBASECommonConfig.cmake  MBASECoreSys.cmake  MBASEFrameworkSys.cmake  MBASEInferenceSys.cmake  MBASEJsonSys.cmake  MBASEMcpSys.cmake  MBASEStdSys.cmake  mbase_lib_cmake_template  mbase_packaging.cmake
cmake_config_in/: mbase-inference-config.cmake.in  mbase-json-config.cmake.in  mbase-mcp-config.cmake.in  mbase-pc-config.cmake.in  mbase-std-config.cmake.in  mbase.libs-config.cmake.in
docs/: program_doc_template.rst
docs/maip/: data_table.html  index.html  maip_document-1.tex  navig_generator.js
docs/source/: conf.py  copyright.rst  index.rst  program_identification.rst
docs/source/core/: index.rst
docs/source/inference/: about.rst  links.rst  quick_start.rst
docs/source/inference/info-reference/: client-in-detail.rst  gguf-files.rst  index.rst  inference-workflow.rst  message-preparation.rst  model-in-detail.rst  on-sampling.rst  (+4 more)
docs/source/json/: index.rst
docs/source/mcp/: about.rst  information_reference.rst  quick_start.rst
docs/source/setting-up/: about.rst  cfs.rst  download.rst
docs/source/std/: index.rst
examples/benchmark/: CMakeLists.txt  benchmark.cpp
examples/embedding/: CMakeLists.txt  embedding.cpp
examples/openai-server/: CMakeLists.txt  client.cpp  client.h  global_state.h  input_list.txt  main.cpp  model.cpp  model.h  openai-server.cpp  openai_errors.h  processor.cpp  processor.h
examples/retrieval/: CMakeLists.txt  retrieval.cpp
examples/simple-conversation/: CMakeLists.txt  simple-conversation.cpp
examples/typo-fixer/: CMakeLists.txt  typo-fixer.cpp
html_doc/: conventions.html  framework_start.html  general.css  index.html  maip_document-1.tex  navig_generator.js  standard_start.html
include/mbase/: algorithm.h  allocator.h  argument_get_value.h  atomic.h  behaviors.h  binary_iterator.h  char_stream.h  common.h  container_serializer_helper.h  crypto_asym.h  crypto_hash.h  crypto_init.h  crypto_key_manager.h  crypto_sym.h  filesystem.h  http_parser.h  index_assigner.h  io_base.h  io_file.h  io_tcp_client.h  list.h  list_iterator.h  maip_client.h  maip_parser.h  map.h  mbase.h  mbase_std.h  node_type.h  platform.h  queue.h  rng.h  safe_buffer.h  sequence_iterator.h  set.h  smart_conversion.h  stack.h  string.h  subprocess.h  synchronization.h  thread.h  (+8 more)
include/mbase/app/: async_io.h  entry.h  ev_loop.h  event_handler.h  event_manager.h  handler_base.h  io_context.h  key_input.h  sys_helper.h  thread_pool.h  timer_loop.h  timers.h
include/mbase/framework/: async_io.h  event_handler.h  event_manager.h  handler_base.h  io_context.h  logical_processing.h  object_watcher.h  sys_helper.h  thread_pool.h  timer_loop.h  timers.h
include/mbase/inference/: inf_chat_templates.h  inf_client.h  inf_client_security_params.h  inf_common.h  inf_common.h.in  inf_context_line.h  inf_device_desc.h  inf_embedder.h  inf_embedder_client.h  inf_gguf_metadata_configurator.h  inf_maip_callbacks.h  inf_maip_model_description.h  inf_maip_peer_base.h  inf_maip_peer_t2t.h  inf_maip_security.h  inf_maip_server.h  inf_maip_user.h  inf_model.h  inf_processor.h  inf_program.h  inf_sampling.h  inf_sampling_set.h  inf_t2t_client.h  inf_t2t_model.h  inf_t2t_proc_diagnostics.h  inf_t2t_processor.h
include/mbase/json/: json.h  jtckdint.h
include/mbase/mcp/: mcp_client_arguments.h  mcp_client_base.h  mcp_client_callbacks.h  mcp_client_server_http.h  mcp_client_server_state.h  mcp_client_server_stdio.h  mcp_common.h  mcp_notifications.h  mcp_packet_parsing.h  mcp_server_arguments.h  mcp_server_base.h  mcp_server_client_http_streamable.h  mcp_server_client_state.h  mcp_server_client_stdio.h  mcp_server_descriptions.h  mcp_server_features.h  mcp_server_http_streamable.h  mcp_server_responses.h  mcp_server_stdio.h  mcp_server_to_client_requests.h
include/mbase/pc/: pc_config.h  pc_diagnostics.h  pc_io_manager.h  pc_net_manager.h  pc_program.h  pc_state.h  pc_stream_manager.h  pc_termination_handler.h
legal/: LICENSE-full  cuda_redis_disclaimer
mbase/: 5  CMakeLists.txt  inf_client.cpp  inf_common.cpp  inf_embedder.cpp  inf_gguf_meta_configurator.cpp  inf_maip_callbacks.cpp  inf_maip_model_description.cpp  inf_maip_peer_base.cpp  inf_maip_peer_t2t.cpp  inf_maip_security.cpp  inf_maip_server.cpp  inf_maip_user.cpp  inf_model.cpp  inf_processor.cpp  inf_program.cpp  inf_sampling.cpp  inf_t2t_model.cpp  inf_t2t_processor.cpp  pc_config.cpp  pc_diagnostics.cpp  pc_io_manager.cpp  pc_net_manager.cpp  pc_program.cpp  pc_state.cpp  pc_stream_manager.cpp
mbase/inference/: inf_common.cpp  inf_device_desc.cpp  inf_embedder.cpp  inf_gguf_meta_configurator.cpp  inf_maip_callbacks.cpp  inf_maip_model_description.cpp  inf_maip_peer_t2t.cpp  inf_maip_server.cpp  inf_model.cpp  inf_processor.cpp  inf_program.cpp  inf_t2t_client.cpp  inf_t2t_model.cpp  inf_t2t_proc_diagnostics.cpp  inf_t2t_processor.cpp
mbase/json/: json.cpp
mbase/mcp/: mcp_client_base.cpp  mcp_client_server_http.cpp  mcp_client_server_state.cpp  mcp_client_server_stdio.cpp  mcp_server_base.cpp  mcp_server_client_http_streamable.cpp  mcp_server_client_state.cpp  mcp_server_client_stdio.cpp  mcp_server_features.cpp  mcp_server_http_streamable.cpp  mcp_server_stdio.cpp
mbase/pc/: pc_config.cpp  pc_diagnostics.cpp  pc_io_manager.cpp  pc_net_manager.cpp  pc_program.cpp  pc_state.cpp  pc_stream_manager.cpp
python/: README.md  setup.py
python/mbasepy/: __init__.py  _core.cpp
scripts/: maip_builder.py  maip_client.py  maip_context.py  maip_operation_object.py  maip_resolver.py
src/: CMakeLists.txt  inf_client.cpp  inf_model.cpp  inf_processor.cpp  pc_config.cpp  pc_io_manager.cpp  pc_net_manager.cpp  pc_program.cpp
(+52 files in other folders)
