add_executable(mbase_embedder_util embedding.cpp)

target_compile_definitions(mbase_embedder_util PRIVATE ${MBASE_COMMON_COMPILE_DEFINITIONS})
target_compile_options(mbase_embedder_util PRIVATE ${MBASE_COMMON_COMPILE_OPTIONS})
target_include_directories(mbase_embedder_util PUBLIC mb_inference mb_json)
target_link_libraries(mbase_embedder_util PRIVATE ${MBASE_STD_LIBS} mb_inference mb_json)
